Mac App now working
Build and run the Mac app. This will generate the file under
~/Library/XML to SQLLite/Guidelines.sqlite - copy this into the iOS
project to autopopulate data

--- a/XML to SQLLite/XML to SQLLite/en.lproj/MainMenu.xib
+++ b/XML to SQLLite/XML to SQLLite/en.lproj/MainMenu.xib
@@ -1308,7 +1308,6 @@
 							<string key="NSFrame">{{17, 115}, {348, 27}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="613476591">
 								<int key="NSCellFlags">67239424</int>
@@ -1340,23 +1339,23 @@
 								</object>
 							</object>
 						</object>
-						<object class="NSTextField" id="658095723">
+						<object class="NSTextField" id="273157456">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{172, 56}, {38, 50}}</string>
+							<string key="NSFrame">{{29, 29}, {336, 61}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
 							<bool key="NSEnabled">YES</bool>
-							<object class="NSTextFieldCell" key="NSCell" id="552148705">
+							<object class="NSTextFieldCell" key="NSCell" id="405033462">
 								<int key="NSCellFlags">67239424</int>
 								<int key="NSCellFlags2">138412032</int>
-								<string key="NSContents">0</string>
+								<string key="NSContents">Now copy the .sqlite file from ~/Library/XML to SQLLite/</string>
 								<object class="NSFont" key="NSSupport">
 									<string key="NSName">LucidaGrande</string>
-									<double key="NSSize">41</double>
-									<int key="NSfFlags">16</int>
+									<double key="NSSize">13</double>
+									<int key="NSfFlags">1044</int>
 								</object>
-								<reference key="NSControlView" ref="658095723"/>
+								<reference key="NSControlView" ref="273157456"/>
 								<reference key="NSBackgroundColor" ref="910345311"/>
 								<reference key="NSTextColor" ref="850222917"/>
 							</object>
@@ -2059,14 +2058,6 @@
 					</object>
 					<int key="connectionID">532</int>
 				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">counter</string>
-						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="658095723"/>
-					</object>
-					<int key="connectionID">538</int>
-				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -2598,7 +2589,7 @@
 						<reference key="object" ref="439893737"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="470322771"/>
-							<reference ref="658095723"/>
+							<reference ref="273157456"/>
 						</array>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -3084,17 +3075,17 @@
 						<reference key="parent" ref="470322771"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">536</int>
-						<reference key="object" ref="658095723"/>
+						<int key="objectID">539</int>
+						<reference key="object" ref="273157456"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="552148705"/>
+							<reference ref="405033462"/>
 						</array>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">537</int>
-						<reference key="object" ref="552148705"/>
-						<reference key="parent" ref="658095723"/>
+						<int key="objectID">540</int>
+						<reference key="object" ref="405033462"/>
+						<reference key="parent" ref="273157456"/>
 					</object>
 				</array>
 			</object>
@@ -3240,8 +3231,8 @@
 				<string key="517.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="533.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="534.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="536.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="537.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="539.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="540.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="56.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="57.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="58.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3262,7 +3253,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">538</int>
+			<int key="maxID">540</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3280,20 +3271,17 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="counter">NSTextField</string>
-						<string key="window">NSWindow</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="counter">
-							<string key="name">counter</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="window">
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">window</string>
+						<string key="NS.object.0">NSWindow</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">window</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
 							<string key="name">window</string>
 							<string key="candidateClassName">NSWindow</string>
 						</object>
-					</dictionary>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/AppDelegate.h</string>
